# yoagent-state

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: book.toml
docs/src/: SUMMARY.md  acknowledgments.md  activegraph-runtime.md  api-guide.md  cli.md  concepts.md  examples.md  first-lineage-example.md  for-agents.md  getting-started.md  introduction.md  mental-model.md  patch-eval-decision-tutorial.md  patch-lifecycle.md  persistence.md  roadmap.md  safety-rules.md  why-agent-state.md  yoagent-integration.md  yoyo-evolve-integration.md
docs/theme/: mermaid-init.js
examples/: basic_lineage.rs  behavior_subscription.rs  gasp_agent_repo.rs  goal_lineage.rs  patch_eval_decision.rs  policy_approval.rs  replay_and_fork.rs  typed_pack.rs  yoagent_integration.rs  yoyo_evolve_demo.rs
src/: adapter.rs  artifact.rs  behavior.rs  error.rs  event.rs  fork.rs  git_store.rs  graph.rs  ids.rs  lib.rs  observer.rs  patch.rs  policy.rs  primitives.rs  projector.rs  query.rs  runtime.rs  schema.rs  state.rs  store.rs
tests/: activegraph_concepts.rs  adapter_conformance.rs  failure_paths.rs  git_store.rs  run_chaining.rs  state_flow.rs
