[package]
name = "yoagent-state"
version = "0.4.1"
edition = "2024"
description = "Durable state and lineage for long-running agents."
license = "MIT"
repository = "https://github.com/yologdev/yoagent-state"
homepage = "https://yologdev.github.io/yoagent-state/"
documentation = "https://docs.rs/yoagent-state"
readme = "README.md"
keywords = ["agent", "state", "lineage", "ai", "memory"]
categories = ["asynchronous", "development-tools"]
authors = ["Yuanhao <yuanhao@yolog.dev>"]
rust-version = "1.85"
exclude = ["docs/images/*", "docs/theme/*", ".github/*", "AGENTS.md"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
